--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <header class="menu">
       <h1 class="logo">
-        <img src="../images/logo.svg" alt="logo mark" class="logo-mark" />
-        <img src="../images/name.svg" alt="logo name" class="logo-name" />
+        <img src="images/logo.svg" alt="logo mark" class="logo-mark" />
+        <img src="images/name.svg" alt="logo name" class="logo-name" />
       </h1>
       <ul class="nav">
         <li><a href="">Local Attractions</a></li>
