--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="intro__heading__jumbo">Tulip Town</span>
       </h2>
       <div class="intro__img">
-        <img src="/images/03.jpg" alt="" />
+        <img src="images/03.jpg" alt="" />
       </div>
       <div class="intro__info">
         <p class="intro__info__heading">
@@ -59,7 +59,7 @@
         <h3 class="section-header__title">A Relaxing and Beautiful Town</h3>
       </div>
       <div class="attractions">
-        <img class="attraction-img" src="/images/02.jpg" alt="" />
+        <img class="attraction-img" src="images/02.jpg" alt="" />
         <div class="attraction-info">
           <p class="attraction-info__title">
             <strong>Quaint & Quiet Cottages</strong>
@@ -71,7 +71,7 @@
             yet, you can book your stay directly on our website!
           </p>
         </div>
-        <img class="attraction-img" src="/images/01.jpg" alt="" />
+        <img class="attraction-img" src="images/01.jpg" alt="" />
         <div class="attraction-info">
           <p class="attraction-info__title">
             <strong>World-Renowned Tulips</strong>
@@ -95,34 +95,34 @@
       </div>
       <div class="photo__gallery">
         <div class="photo">
-          <img class="photo__img" src="/images/04.jpg" alt="" />
+          <img class="photo__img" src="images/04.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/05.jpg" alt="" />
+          <img class="photo__img" src="images/05.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/06.jpg" alt="" />
+          <img class="photo__img" src="images/06.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/07.jpg" alt="" />
+          <img class="photo__img" src="images/07.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/08.jpg" alt="" />
+          <img class="photo__img" src="images/08.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/09.jpg" alt="" />
+          <img class="photo__img" src="images/09.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/10.jpg" alt="" />
+          <img class="photo__img" src="images/10.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/11.jpg" alt="" />
+          <img class="photo__img" src="images/11.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/12.jpg" alt="" />
+          <img class="photo__img" src="images/12.jpg" alt="" />
         </div>
         <div class="photo">
-          <img class="photo__img" src="/images/13.jpg" alt="" />
+          <img class="photo__img" src="images/13.jpg" alt="" />
         </div>
       </div>
     </section>
