--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <img src="images/name.svg" alt="logo name" class="logo-name" />
       </h1>
       <ul class="nav">
-        <li><a href="">Local Attractions</a></li>
-        <li><a href="">Photo Gallery</a></li>
+        <li><a href="#attractions-section">Local Attractions</a></li>
+        <li><a href="#photo-section">Photo Gallery</a></li>
       </ul>
     </header>
     <section class="intro">
@@ -53,7 +53,7 @@
         <li class="intro__social__item"><i class="fab fa-twitter"></i></li>
       </ul>
     </section>
-    <section>
+    <section id="attractions-section">
       <div class="section-header">
         <h4 class="section-header__subtitle">Local Attractions</h4>
         <h3 class="section-header__title">A Relaxing and Beautiful Town</h3>
@@ -86,7 +86,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="photo-section">
       <div class="section-header">
         <h4 class="section-header__subtitle">Photo Gallery</h4>
         <h3 class="section-header__title">
